# selx-plataforma

./: .env.example  iniciar-dev.ps1  pnpm-lock.yaml  pnpm-workspace.yaml
apps/ai-service/: README.md  pyproject.toml
apps/ai-service/app/: gateway.py  main.py
apps/ai-service/tests/: test_gateway.py
apps/api/: package.json
apps/api/scripts/: fumaca-core.mjs
apps/api/src/: app.module.ts  main.ts
apps/api/src/auth/: autenticacao.guard.ts  auth.controller.ts  auth.module.ts  auth.service.ts
apps/api/src/empresas/: empresas.controller.ts  empresas.module.ts
apps/api/src/funcionarios/: funcionarios.controller.ts
apps/api/src/gestao-pessoas/: aderencia.controller.ts  aderencia.spec.ts  aderencia.ts  avaliacao-360.controller.ts  avaliacao-comportamental-publico.controller.ts  avaliacao-comportamental.controller.ts  avaliacao-desempenho.controller.ts  banco-perguntas.controller.ts  calcular-resultado.ts  colaborador-360.controller.ts  desempenho-360.spec.ts  desempenho-360.ts  gestao-pessoas.module.ts  ia-comportamental.controller.ts  ia-desempenho.controller.ts  pdi.controller.ts  pdi.spec.ts  pdi.ts  perfil-comportamental-padrao.controller.ts  perfil-comportamental.controller.ts  riscos.controller.ts  riscos.spec.ts  riscos.ts
apps/api/src/prisma/: prisma.service.ts
apps/api/src/recrutamento/: acompanhamento-publico.controller.ts  admissao-processo.controller.ts  admissao-publico.controller.ts  admissoes-lista.controller.ts  analise-candidato.spec.ts  (+18 more)
apps/web/: next.config.mjs  tsconfig.tsbuildinfo
docs/modules/performance-360/: IMPLEMENTATION_PLAN.md
(+83 files in other folders)
