[project]
name = "selx-ai-service"
version = "0.1.0"
description = "SelX 2.0 — Serviço de IA. Casa do AI Gateway (ADR-0003): todo consumo de LLM da plataforma passa por aqui."
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "httpx>=0.27",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "httpx>=0.27",
    "ruff>=0.7",
]

[tool.ruff]
line-length = 100

[tool.pytest.ini_options]
pythonpath = ["."]
